--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -10,8 +10,12 @@
 }
 
 .header-innovation-text {
-  padding-left: 10px!important;
-  padding-top: 5px!important;
+  padding-left: 10px !important;
+  padding-top: 5px !important;
+}
+
+.header-submit-button {
+  background: #E65100;
 }
 
 .content-wraper {
@@ -42,12 +46,12 @@ ul {
 
 
 .do-you {
-  background: #d25e5e;
+  background: #5E35B1;
   height: 100vh;
 }
 
 .do-you-second {
-  background: #d25e5e;
+  background: #5E35B1;
   padding: 30px 0 20px 0;
   text-align: center;
 }
@@ -92,7 +96,7 @@ ul {
 
 .yes-button {
   position: absolute;
-  bottom: 0;
+  bottom: 30px;
   padding: 24px;
   width: 100%;
   text-align: center;
@@ -102,15 +106,19 @@ ul {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
-  background: #d25e5e;
+  background: #5E35B1;
+  margin-top: 10px;
 
   .card {
-    background: #2C6A91;
-    display: inline-block;
+    background: #263238;
     box-shadow: 0 2px 5px;
     margin: 14px;
     padding: 10px;
     white-space: pre-wrap;
+    height: 510px;
+    vertical-align: top;
+    display: inline-block;
+    position: relative;
   }
 
   .card-title {
@@ -150,7 +158,7 @@ ul {
 }
 
 .incentives {
-  background: #444;
+  background: #263238;
   padding: 40px 0 10px 0px;
   color: #fff;
   text-align: center;
@@ -171,7 +179,7 @@ ul {
 }
 
 .submit-idea {
-  background: #444;
+  background: #263238;
 }
 
 .submit-idea-title {
@@ -182,7 +190,8 @@ ul {
 }
 
 .btn-success {
-  background-color: #5eb947;
+  background-color: #54ab3e;
+  border-color: #4b9e4b;
 }
 
 
@@ -206,20 +215,6 @@ ul {
   float: right;
 }
 
-
-
-.moving-background {
-  height: 100vh !important;
-  background: red url(https://subtlepatterns.com/patterns/geometry2.png) repeat 0 0;
-  width: 100%;
-  margin: 0;
-  text-align: center;
-  height: 300px;
-  padding-top: 120px;
-  box-sizing: border-box;
-  animation: slide 20s linear infinite;
-}
-
 @keyframes slide {
   from {
     background-position: 0 0;
@@ -230,23 +225,52 @@ ul {
   }
 }
 
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 
 .fade-in {
-  opacity:0;  /* make things invisible upon start */
-  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
+  opacity: 0;
+  /* make things invisible upon start */
+  -webkit-animation: fadeIn ease-in 1;
+  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
+  -webkit-animation-fill-mode: forwards;
+  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 .fade-in.one {
@@ -257,7 +281,7 @@ ul {
 
 .fade-in.two {
   -webkit-animation-delay: .7s;
-  -moz-animation-delay:.7s;
+  -moz-animation-delay: .7s;
   animation-delay: .7s;
 }
 
@@ -267,7 +291,7 @@ ul {
   animation-delay: 1.1s;
 }
 
-.submit-text{
+.submit-text {
   padding: 20px;
   text-align: center;
   color: #fff;
