--- a/src/app/components/splashscreen/splashscreen.component.scss
+++ b/src/app/components/splashscreen/splashscreen.component.scss
@@ -1,11 +1,10 @@
 .center-parent {
   height: 100vh;
   position: relative;
-  background: #52338e;
+  background: #5E35B1;
 }
 
 .center-content {
-  // width: 90%;
   text-align: center;
   position: absolute;
   top: 50%;
