--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -115,14 +115,14 @@ ul {
     margin: 14px;
     padding: 10px;
     white-space: pre-wrap;
-    height: 510px;
+    height: 560px;
     vertical-align: top;
     display: inline-block;
     position: relative;
   }
 
   .card-title {
-    font-size: 24px;
+    font-size: 22px;
     color: #fff;
     margin: 0;
     padding: 10px;
@@ -295,4 +295,9 @@ ul {
   padding: 20px;
   text-align: center;
   color: #fff;
+}
+
+.rule-points {
+  font-size: 12px;
+  color: #ef7a3a;
 }
