--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -10,7 +10,7 @@
 }
 
 .header-innovation-text {
-  padding-left: 10px !important;
+  padding-left: 20px !important;
   padding-top: 5px !important;
 }
 
@@ -255,42 +255,6 @@ ul {
   }
 }
 
-.fade-in {
-  opacity: 0;
-  /* make things invisible upon start */
-  -webkit-animation: fadeIn ease-in 1;
-  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-  -moz-animation: fadeIn ease-in 1;
-  animation: fadeIn ease-in 1;
-
-  -webkit-animation-fill-mode: forwards;
-  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-  -moz-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-
-  -webkit-animation-duration: 1s;
-  -moz-animation-duration: 1s;
-  animation-duration: 1s;
-}
-
-.fade-in.one {
-  -webkit-animation-delay: 0.2s;
-  -moz-animation-delay: 0.2s;
-  animation-delay: 0.2s;
-}
-
-.fade-in.two {
-  -webkit-animation-delay: .7s;
-  -moz-animation-delay: .7s;
-  animation-delay: .7s;
-}
-
-.fade-in.three {
-  -webkit-animation-delay: 1.1s;
-  -moz-animation-delay: 1.1s;
-  animation-delay: 1.1s;
-}
-
 .submit-text {
   padding: 20px;
   text-align: center;
@@ -300,4 +264,30 @@ ul {
 .rule-points {
   font-size: 12px;
   color: #ef7a3a;
+}
+
+.notification{
+  background: #b53636;
+  position: absolute;
+  top: 56px;
+  width: 100%;
+  z-index: 111111111;
+  color: #fff;
+  padding: 16px;
+  text-align: center;
+  font-size: 14px;
+}
+
+.link-button {
+  margin-top: 10px;
+  border: none;
+}
+
+.result-banner {
+  height: 30px;
+  background: #54ab3e;
+}
+
+.margin-from-top {
+  margin-top: 82px;
 }
