--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -44,7 +44,8 @@
       </div>
     </div>
   </div>
-  <div class="notification">
-    ** Please note that the voting link will be up and running again with some <b>NEW Cool 😎 Ideas</b>!
-    which were not included in the previous polling.
+  <div class="col-md-12" style="padding: 0">
+    <div class="notification">
+      ** Please note that we will keep on updating the voting link with <b>new cool ideas</b> 😎.
+    </div>
   </div>
